--- a/styles.css
+++ b/styles.css
@@ -74,8 +74,8 @@ a:hover {
   grid-template-columns: repeat(7, 1fr);
   gap: 8px;
   padding: 8px;
-  width: 98%;
 
+  justify-items: center;
 }
 
 /* Album tile */
@@ -83,7 +83,9 @@ a:hover {
   width: 100%;
   aspect-ratio: 1 / 1;
   position: relative;
+  place-self: center;
 }
+
 .album-cover {
   width: 100%;
   height: 100%;
@@ -244,13 +246,34 @@ ul {
   max-width: 10vw;
 }
 
+#most-popular-album-cover {
+  width: 30vw;
+  border: 5px solid white;
+  border-radius: 30px;
+  margin-bottom: 15px;
+}
+
+#most-popular-album-name, #most-popular-album-artist, #most-popular-album-entry-count
+  {
+  margin: 5px;
+}
+
+#most-popular-artist-name, #most-popular-artist-entry-count {
+  margin: 5px;
+}
+
+#user-list {
+  margin-bottom: 20px;
+}
+
+
 @media (max-width: 1000px) {
   body {
     height: 60vh;
     margin: 2vw 2vh;
   }
-  h1 {font-size: 60px}
-  h2 {font-size: 50px}
+  h1 {font-size: 65px}
+  h2 {font-size: 60px; font-weight: bolder;}
   input, button {
     padding: 10px;
     font-size: 50px
@@ -268,6 +291,7 @@ ul {
 
   h3 {
     font-size: 50px;
+    font-weight: 500;
   }
 
   #manual-add input, button {
@@ -307,7 +331,7 @@ ul {
 
   #grid {
     grid-template-columns: repeat(4, 1fr);
-    gap: 2px
+    gap: 2px;
   }
 
   .answer {
@@ -315,12 +339,15 @@ ul {
   font-weight: 430;
   width: 90vw;
   font-size: xxx-large;
-}
+  }
 
-     .badge {
+  .badge {
     max-width: 40vw;
     padding-left: 50px;
     padding-right: 50px;
   }
 
+  #most-popular-album-cover {
+    width: 60vw;
+  }
 }
