--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,30 @@ a:hover {
   place-self: center;
 }
 
+.album::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  bottom: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(5px);
+  color: white;
+  font-weight: 500;
+  padding: 6px 5px;
+  border-radius: 6px;
+  white-space: pre-wrap;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.35s ease;
+}
+
+.album:hover::after{
+  opacity: 1;
+}
+
 .album-cover {
   width: 100%;
   height: 100%;
@@ -188,8 +212,8 @@ button:hover {
 
 #edit-panel {
   background-color: #303030;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 15%;
+  margin-right: 15%;
   margin-top: 30px;
   margin-bottom: 50px;
   padding: 10px;
@@ -204,12 +228,17 @@ ul {
   font-size: 20px;
 }
 
+#search-add {
+  display: block;
+  justify-items: center;
+}
+
 .search-result {
   border: 1px solid white;
   max-width: 20vw;
   padding: 10px;
   border-radius: 10px;
-  margin: 5px;
+  margin: auto;
 }
 
 .search-result:hover {
@@ -299,6 +328,7 @@ ul {
       font-weight: normal;
   }
 
+
   .search-result {
     padding: 20px;
     font-size: 30px;
@@ -311,8 +341,8 @@ ul {
     position: relative;
   }
   .overlay img {
-  width: 80px;
-  height: 80px;
+  width: 65px;
+  height: 65px;
 
   }
   .delete-btn, .edit-btn {
@@ -350,4 +380,11 @@ ul {
   #most-popular-album-cover {
     width: 60vw;
   }
+
+
+  .album:hover::after{
+    opacity: 1;
+    font-size: large;
+  }
+
 }
